--- a/index.html
+++ b/index.html
@@ -12,40 +12,43 @@
     <link rel="stylesheet" href="css/main.css" />
     <script src="script.js" defer></script>
   </head>
+
   <body>
     <header role="header" class="relative">
-      <nav
-        class="w-[100%] absolute top-0 left-0 flex px-8 justify-between items-center z-10"
-      >
-        <!-- <img src="images/logo.svg" alt="" /> -->
-        <div class="">
-          <img src="images/logo.svg" alt="logo" />
-        </div>
-        <div
-          id="nav-links"
-          class="flex flex-col gap-6 py-8 font-semibold text-gray-600"
+      <div class="overflow-x-hidden">
+        <nav
+          class="w-[100%] absolute top-10 left-0 h-20 md:pt-6 flex px-8 justify-between items-center z-10"
         >
-          <ul
-            class="w-[100%] flex flex-col gap-4 items-center md:flex-row md:text-white"
+          <!-- <img src="images/logo.svg" alt="" /> -->
+          <div class="">
+            <img src="images/logo.svg" alt="logo" />
+          </div>
+          <div
+            class="navShow hidden md:flex flex-col md:absolute md:-top-10 md:right-[20%] md:items-center md:justify-center gap-8 font-semibold text-gray-600"
           >
-            <li>About</li>
-            <li>Services</li>
-            <li>Projects</li>
-            <button
-              type="button"
-              class="bg-[#fed201] py-3 px-8 self-center rounded-full uppercase md:bg-[#fff] md:text-black"
+            <ul
+              id="nav-links"
+              class="w-[100%] py-6 nav-links md:flex flex-col gap-4 items-center md:flex-row md:text-white"
             >
-              Contact
-            </button>
-          </ul>
-        </div>
-        <img
-          id="menu"
-          class="md:hidden"
-          src="images/icon-hamburger.svg"
-          alt="image"
-        />
-      </nav>
+              <li>About</li>
+              <li>Services</li>
+              <li>Projects</li>
+              <button
+                type="button"
+                class="bg-[#fed201] py-3 px-8 self-center rounded-full uppercase md:bg-[#fff] md:text-black"
+              >
+                Contact
+              </button>
+            </ul>
+          </div>
+          <img
+            id="menu"
+            class="md:hidden"
+            src="images/icon-hamburger.svg"
+            alt="image"
+          />
+        </nav>
+      </div>
 
       <main class="relative items-center">
         <div
@@ -77,7 +80,7 @@
     <!--  -->
 
     <div class="blocks flex flex-col">
-      <div class="block-1 grid grid-cols-2">
+      <div class="block-1 md:grid md:grid-cols-2">
         <div class="block-text md:block-text-md">
           <h1>Transform your brand</h1>
           <p>
@@ -102,7 +105,7 @@
         </div>
       </div>
 
-      <div class="block-2 grid grid-cols-2">
+      <div class="block-2 md:grid grid-cols-2">
         <div>
           <img
             class="md:hidden"
@@ -132,7 +135,7 @@
       <!--  -->
 
       <!-- desgin -->
-      <div class="block-3 flex">
+      <div class="block-3 md:flex">
         <div class="relative">
           <img
             class="-z-10 md:hidden"
